==> nyameaama/MARS-Flight-System-Firmware/base-firmware-V2/src/Display/ssd1306.c <==
#include "ssd1306.h"
#define I2C1_NODE DT_NODELABEL(display)
#define SSD1306_WRITECOMMAND(command)      ssd1306_I2C_Write(SSD1306_I2C_ADDR, 0x00, (command))
#define SSD1306_WRITEDATA(data)            ssd1306_I2C_Write(SSD1306_I2C_ADDR, 0x40, (data))
#define ABS(x)   ((x) > 0 ? (x) : -(x))
#define SSD1306_RIGHT_HORIZONTAL_SCROLL              0x26
#define SSD1306_LEFT_HORIZONTAL_SCROLL               0x27
#define SSD1306_VERTICAL_AND_RIGHT_HORIZONTAL_SCROLL 0x29
#define SSD1306_VERTICAL_AND_LEFT_HORIZONTAL_SCROLL  0x2A
#define SSD1306_DEACTIVATE_SCROLL                    0x2E // Stop scroll
#define SSD1306_ACTIVATE_SCROLL                      0x2F // Start scroll
#define SSD1306_SET_VERTICAL_SCROLL_AREA             0xA3 // Set scroll range
#define SSD1306_NORMALDISPLAY       0xA6
#define SSD1306_INVERTDISPLAY       0xA7

void ssd1306_I2C_WriteMulti(uint8_t address, uint8_t reg, uint8_t* data, uint16_t count) {
	uint8_t dt[256];
	uint8_t i;
	dt[0] = reg;
	for(i = 0; i < count; i++){
		dt[i+1] = data[i];
	}
	uint8_t ret;
	ret = i2c_write_dt(&dev_i2c, dt, sizeof(dt));
	if(ret != 0){
		printk("Failed to write to I2C device address");
	}
}

void ssd1306_I2C_Write(uint8_t address, uint8_t reg, uint8_t data) {
	uint8_t msg[2] = {reg, data};
	uint8_t ret;
	ret = i2c_write_dt(&dev_i2c, msg, sizeof(data));
	if(ret != 0){
		printk("Failed to write to I2C device address");
	}
}
